<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:atts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_60dp"
                android:src="@drawable/greenlogo" />

            <com.inforica.booker.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_30dp"
                android:text="@string/signin"
                android:textColor="@color/text_black"
                android:textSize="@dimen/veryExtralargeFont"
                atts:fontName="@string/fnt_OpenSans_Regular" />

            <com.inforica.booker.views.CustomTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/use_office_account"
                android:textColor="@color/text_black"
                android:textSize="@dimen/MediumFont"
                atts:fontName="@string/fnt_OpenSans_Regular" />

            <com.inforica.booker.views.CustomTextView
                android:id="@+id/whatsthis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/what_is_this"
                android:textColor="@color/primary"
                android:textSize="@dimen/LargeFont"
                atts:fontName="@string/fnt_OpenSans_Regular" />

            <com.inforica.booker.views.EditTextView
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_50dp"
                android:gravity="left"
                android:cursorVisible="true"
                android:ellipsize="start"
                android:inputType="textEmailAddress"
                android:maxLength="75"
                android:hint="@string/example_mail"
                android:paddingLeft="@dimen/margin_5dp"
                android:singleLine="true"
                android:textColor="@color/text_normal"
                android:textColorHint="@color/text_hint"></com.inforica.booker.views.EditTextView>

            <com.andexert.library.RippleView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.inforica.booker.views.ButtonView
                    android:id="@+id/sign_in"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:background="@color/primary"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/text_white"
                    atts:fontName="@string/fnt_OpenSans_semi_bold" />
            </com.andexert.library.RippleView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
